refactor: changed how characters are generated.
This update changes how the `generateCharCode` function generates
characters. The new method will allow for the expansion of more
characters by removing the manual `if else` chaining. Furthermore we
also removed the `conformPassword` check step as the new method will
always ensure the proper number of attributes exists in the password (at
the cost of possibly being a bit less random).

This update includes the following changes:
* The `generateCharCode` function now recieves a new parameter, a
`charCodeRequest` object which contains a string that is the desired
character we want to generate. The checks are now performed against a
`characterCodeConstraints` object which contains the attributes for each
character type.
* Removed the `conformPassword` function.
* Moved all Interfaces, Enums, Lists and Objects into a Data folder.
* Removed any currently unused modifiers such as, *memorable* and
*special*
* Updated the README
* Updated the Demo page:
	* Clarified the character set being used.
	* Added a warning about excessive use of the *exclude characters*
feature
	* Removed unneeded JavaScript code for the demo
* Updates to the `package.json` file:
	* removed the `main` attribute, replaced with `browser`
	* Updated version.
	* Added more directories.
	* Changed the `license` attribute to `licenses` and added a URL.
* Added two new helper functions:
	* `shuffle` used to shuffle arrays.
	* `createModifierList` creates a list of modifiers from an object.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   },
   "name": "simplepass",
   "description": "simplePass is a Javascript password generator.",
-  "version": "2.5.1-Development",
-  "main": "bs-config.js",
+  "version": "1.0.0-Beta",
+  "browser": "./simplePass/simplePass.js",
   "directories": {
-    "test": "test"
+    "test": "test",
+    "src": "src",
+    "lib": "simplePass"
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,12 @@
     "email": "staticbanter@gmail.com",
     "url": "https://staticblogs.ca/users/staticBanter"
   },
-  "license":"GPL-3.0",
+  "licenses":[
+    {
+      "type": "GPL-3.0",
+      "url": "https://www.gnu.org/licenses/gpl-3.0.html"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/staticBanter/simplePass/issues"
   },
