Refactor: Changed site directory path.
Had to update the site directory path to something more generic.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload only the site/simplepass/[version] directory.
-          path: './site/simplepass/1.1.0-Beta'
+          path: './site/simplepass'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
