build: Added new build commands.
Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "webpack-build": "webpack build --config webpack.config.js",
     "tsc": "tsc --project .",
     "tsc-watch": "tsc --watch --project .",
-    "docs-build": "jsdoc ./simplePass --tutorials ./docs --configure ./jsdoc.config.json"
+    "docs-build": "jsdoc ./simplePass --tutorials ./docs --configure ./jsdoc.config.json",
+    "prod": "npm run tsc && npm run docs-build && npm run webpack-build",
+    "production": "npm run prod"
   }
 }
