Fix: ```start_url``` now matchs GitHub pages.
Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/manifest.json
+++ b/site/manifest.json
@@ -9,7 +9,7 @@
     "display":"minimal-ui",
     "name": "simplePass",
     "short_name": "simplePass",
-    "start_url": "/",
+    "start_url": "/simplePass",
     "id": "/",
     "prefer_related_applications": false,
     "description": "A JavaScript password generator.",
