docs: Updated the documentaion.
- README.md
	- Fixed tables not rendering properly.
	- Removed unneeded links.
- All MarkDown lists now use - (dashes) instead of * (asterisks).
- CONTRIBUTING.md and DEVELOPMENT.md documentation has been completely
redone.
- SECURTY.md
	- Updated 'Supported Versions' table.
	- Changed how the email security message title should be phrased.
- development.md, and installation-and-examples.md have had their names
changed to DEVELOPMENT.md and EXAMPLES.md respectively
- Added ```webpack-prod-build``` and ```webpack-prod-watch``` command.
- Changed ```webpack-watch``` default environment to ```development```.
- The ```main.js``` file for the PWA now bundles the simplePass.js
script with it. This required use to:
	- Create a separate source directory for the PWA with a separate
```main.js``` script
	- configure webpack for multi-compilation.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
   "homepage": "https://github.com/staticBanter/simplePass#readme",
   "private": true,
   "scripts": {
-    "webpack-build": "webpack build --config webpack.config.js",
-    "webpack-watch": "webpack build --config webpack.config.js --watch",
+    "webpack-build": "webpack build --config webpack.config.js --env production",
+    "webpack-prod-watch": "webpack build --config webpack.config.js --watch --env production",
+    "webpack-dev-build": "webpack build --config webpack.config.js --env development",
+    "webpack-watch": "webpack build --config webpack.config.js --env development --watch",
     "tsc": "tsc --project .",
     "tsc-watch": "tsc --watch --project .",
     "docs-build": "jsdoc ./simplePass/src/ --tutorials ./docs --configure ./jsdoc.config.json",
-    "prod": "npm run tsc && npm run docs-build && npm run webpack-build && npm run html-min",
-    "production": "npm run prod",
-    "html-min":"html-minifier --config-file html-minifier.config.json --input-dir ./site/docs --output-dir ./site/docs --file-ext html"
+    "html-min": "html-minifier --config-file html-minifier.config.json --input-dir ./site/docs --output-dir ./site/docs --file-ext html",
+    "prod": "npm run production",
+    "production": "npm run tsc && npm run docs-build && npm run webpack-build && npm run html-min"
   }
 }
