feature: Added modifier pre-configs and batch password generation.
* Preconfigured modifiers can now be created an selected with a single
radio button. This allows for easier creation of commonly used password
setups.
* The demo can now create batches of passwords instead as well as
singles. This however is not yet possible from within the simplePass
function itself.
* Removed some unneeded HTML attributes from the demo.
* Fixed an error message related to the ```customRepeatingCharacters```
missing a replacement string.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "name": "simplepass",
   "description": "simplePass is a Javascript password generator.",
-  "version": "4.0.0-Beta",
+  "version": "4.1.0-Beta",
   "browser": "./simplePass/browser/simplePass.js",
   "directories": {
     "test": "test",
@@ -51,5 +51,8 @@
     "sass-watch": "sass site_src/main.scss:site/main.css --style=compressed --no-source-map --watch --update",
     "prod": "npm run production",
     "production": "npm run tsc && npm run docs-build && npm run webpack-build && npm run html-min && npm run sass-build"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
