--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "sass": "^1.58.3",
     "typescript": "^4.7.4",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.13.1"
   },
   "name": "simplepass",
   "description": "simplePass is a Javascript password generator.",
@@ -43,6 +44,7 @@
   "scripts": {
     "webpack-build": "webpack build --config webpack.config.js",
     "webpack-watch": "webpack build --config webpack.config.js --watch",
+    "start": "webpack serve",
     "tsc": "tsc --project .",
     "tsc-watch": "tsc --watch --project .",
     "docs-build": "jsdoc ./javascript/module/ --tutorials ./docs --configure ./jsdoc.config.json",
