build: PWA can now be developed on locally.
This added a new command as well:
- `webpack-dev-build`: this will run the project with the *development*
environment flag set.

A few commands were also modified.
- `webpack-watch`: now runs in development.
- `webpack-build`: now runs in production.

Running Webpack in development will change certain URLs that the
service-worker and manifest files use to create a PWA to local URLs.
When ran in production mode the URLs are reverted back to production
ones.

There are also three custom environment variables that can be passed to
Webpack if you have a more complex server set up:
- `customManifestStartURL`: Set a custom `manifest.json` `start_url`.
- `customBaseURL`: The directory portion of the URL for the service
worker to base from (for example
`https://staticbanter.github.io**/simplePass/**` or
`localhost:3000**/**`)
- `customServiceWorkerCacheName`: Custom cache name for development
service worker.

The PWA service worker file now gets minified by Webpack when being
copied over! Saves more space client side.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "html-minifier": "^4.0.0",
     "jsdoc": "^4.0.0",
     "sass": "^1.58.3",
@@ -42,8 +43,9 @@
   "homepage": "https://github.com/staticBanter/simplePass#readme",
   "private": true,
   "scripts": {
-    "webpack-build": "webpack build --config webpack.config.js",
-    "webpack-watch": "webpack build --config webpack.config.js --watch",
+    "webpack-build": "webpack build --env production --config webpack.config.js",
+    "webpack-dev-build": "webpack build --env development --config webpack.config.js",
+    "webpack-watch": "webpack build --env development --config webpack.config.js --watch",
     "start": "webpack serve",
     "tsc": "tsc --project .",
     "tsc-watch": "tsc --watch --project .",
