build: Added various build tools and bumped version numbers.
- html-webpack-plugin - Allows for easier creation of HTML documents.
- html-webpack-tags-plugin- Manages assets and injects them as tags into
HTML documents.
- webpack-subresource-integrity - Provides subresource integrity hashes
for resource tags.
- csp-html-webpack-plugin - Injects CSP meta tags into HTML.
- Resources such as JavaScript and CSS should now included integrity
hashes.

Some minor features where intorduced because of the new tools.
- `base` tag has been added to the page.
- CSP meta tags have been added to the page

- Typescript
- JSDoc

- Webpack now handles updating service worker files.

Signed-off-by: staticBanter <76642517+staticBanter@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
+    "csp-html-webpack-plugin": "^5.1.0",
     "html-minifier": "^4.0.0",
-    "jsdoc": "^4.0.0",
+    "html-webpack-plugin": "^5.5.3",
+    "html-webpack-tags-plugin": "^3.0.2",
+    "jsdoc": "^4.0.2",
     "sass": "^1.58.3",
     "terser-webpack-plugin": "^5.3.9",
-    "typescript": "^4.7.4",
+    "typescript": "^5.2.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.13.1"
+    "webpack-dev-server": "^4.13.1",
+    "webpack-subresource-integrity": "^5.2.0-rc.1"
   },
   "name": "simplepass",
-  "description": "simplePass is a Javascript password generator.",
-  "version": "10.0.1-Beta",
+  "description": "A Javascript password generator.",
+  "version": "10.0.2-Beta",
   "browser": "./simplePass/browser/simplePass.js",
   "directories": {
     "test": "test",
