--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
-    "csp-html-webpack-plugin": "^5.1.0",
     "html-minifier": "^4.0.0",
-    "html-webpack-plugin": "^5.5.3",
-    "html-webpack-tags-plugin": "^3.0.2",
     "jsdoc": "^4.0.2",
     "sass": "^1.58.3",
     "terser-webpack-plugin": "^5.3.9",
     "typescript": "^5.2.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.13.1",
-    "webpack-subresource-integrity": "^5.2.0-rc.1"
+    "webpack-dev-server": "^4.13.1"
   },
   "name": "simplepass",
   "description": "A Javascript password generator.",
