build: Pipeline converted to ES module syntax.
All build tools must now use some form of ES module syntax to be
included in the build pipeline.

Signed-off-by: staticBanter <76642517+staticBanter@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prod": "npm run production",
     "production": "npm run tsc && npm run docs-build && npm run webpack-build && npm run html-min && npm run sass-build"
   },
+  "type": "module",
   "dependencies": {
     "normalize.css": "^8.0.1"
   }
