--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -4,7 +4,7 @@
     ],
     "recurseDepth": 10,
     "source": {
-        "includePattern": ".+\\.js(doc|x)?$",
+        "includePattern": ".cjs",
         "excludePattern": "(^|\\/|\\\\)_"
     },
     "sourceType": "module",
